# daily-us-news-discord

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-news.yml
news_briefing/: __init__.py  briefing.py  collect.py  config.py  discord.py  formatting.py  llm.py  main.py  models.py  sources.py
